--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="apple-touch-icon" href="tiktok.jpeg">
     <script>
       function setCookie(name, value, days) {
         var expires = "";
@@ -34,8 +35,7 @@
   </head>
   <body onload="countPageLoad()">
 
-    <h1>My First Heading</h1>
-    <p>Number of page loads: <span id="countDisplay">0</span></p>
+    <h2>Number of page loads: <span id="countDisplay">0</span></p>
 
   </body>
 </html>
