--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="apple-touch-icon" href="tiktok.jpeg">
+    <link rel="apple-touch-icon" sizes="32x32" href="tiktok.jpeg">
     <script>
       function setCookie(name, value, days) {
         var expires = "";
